.k8s/ai-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ai-service
  namespace: climacast
  labels:
    app: ai-service
spec:
  selector:
    app: ai-service
  ports:
    - port: 8070
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-service
  namespace: climacast
  labels:
    app: ai-service
spec:
  selector:
    matchLabels:
      app: ai-service
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: ai-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8070"
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: kubernetes.io/hostname
              labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - ai-service
      containers:
        - name: ai-service
          image: ghcr.io/yunhozz/climacast-ai-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8070
      imagePullSecrets:
        - name: ghcr-secret
