.k8s/batch-server.yml
apiVersion: v1
kind: Service
metadata:
  name: batch-server
  namespace: climacast
spec:
  selector:
    app: batch-server
  clusterIP: None
  ports:
    - port: 8999
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: batch-server
  namespace: climacast
spec:
  selector:
    matchLabels:
      app: batch-server
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: batch-server
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8999"
    spec:
      containers:
        - name: batch-server
          image: ghcr.io/yunhozz/climacast-batch-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8999
      imagePullSecrets:
        - name: ghcr-secret
