.k8s/config-server.yml
apiVersion: v1
kind: Service
metadata:
  name: config-server
spec:
  selector:
    app: config-server
  clusterIP: None
  ports:
    - port: 8888
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
spec:
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
        - name: config-server
          image: climacast/config-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8888
