.k8s/kafka.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: messaging
  labels:
    app: kafka
spec:
  selector:
    app: kafka
  clusterIP: None
  ports:
    - port: 9092
      name: kafka
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: messaging
  labels:
    app: kafka
spec:
  selector:
    matchLabels:
      app: kafka
  serviceName: kafka
  replicas: 3
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: Parallel
  template:
    metadata:
      labels:
        app: kafka
    spec:
      hostname: kafka
      restartPolicy: Always
      containers:
        - name: kafka
          image: wurstmeister/kafka:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9092
          command:
            - sh
            - -c
            - |
              export KAFKA_BROKER_ID=$(echo ${MY_POD_NAME} | awk -F'-' '{print $NF}')
              echo "Setting KAFKA_BROKER_ID to $KAFKA_BROKER_ID"
              export KAFKA_BROKER_ID
              /usr/bin/start-kafka.sh
          volumeMounts:
            - name: kafka-volume
              mountPath: /var/lib/kafka
  volumeClaimTemplates:
    - metadata:
        name: kafka-volume
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: kafka-storage
        resources:
          requests:
            storage: 1Gi
