.k8s/mysql-batch.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-batch
  namespace: database
  labels:
    app: mysql-batch
spec:
  selector:
    app: mysql-batch
  clusterIP: None
  ports:
    - port: 3306
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-batch
  namespace: database
  labels:
    app: mysql-batch
spec:
  serviceName: mysql-batch
  replicas: 1
  selector:
    matchLabels:
      app: mysql-batch
  template:
    metadata:
      labels:
        app: mysql-batch
    spec:
      containers:
        - name: mysql-batch
          image: mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-batch-volume
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: mysql-batch-volume
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: mysql-batch-storage
        resources:
          requests:
            storage: 1Gi
