.k8s/mysql.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-source
spec:
  selector:
    app: mysql-source
  ports:
    - port: 3307
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-replica
spec:
  selector:
    app: mysql-replica
  ports:
    - port: 3308
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-batch
spec:
  selector:
    app: mysql-batch
  ports:
    - port: 3309
      targetPort: 3306
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-source-statefulset
spec:
  serviceName: mysql-source
  replicas: 1
  selector:
    matchLabels:
      app: mysql-source
  template:
    metadata:
      labels:
        app: mysql-source
    spec:
      containers:
        - name: mysql-source
          image: mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-config
              mountPath: /etc/mysql/conf.d
              readOnly: true
            - name: mysql-source-data
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-config
          configMap:
            name: mysql-source-configmap
        - name: mysql-source-data
          persistentVolumeClaim:
            claimName: mysql-source-pvc
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-replica-statefulset
spec:
  serviceName: mysql-replica
  replicas: 3
  selector:
    matchLabels:
      app: mysql-replica
  template:
    metadata:
      labels:
        app: mysql-replica
    spec:
      containers:
        - name: mysql-replica
          image: mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-config
              mountPath: /etc/mysql/conf.d
              readOnly: true
            - name: mysql-replica-data
              mountPath: /var/lib/mysql
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: kubernetes.io/hostname
              labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - mysql-replica
      volumes:
        - name: mysql-config
          configMap:
            name: mysql-replica-configmap
        - name: mysql-replica-data
          persistentVolumeClaim:
            claimName: mysql-replica-pvc
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-batch-statefulset
spec:
  serviceName: mysql-batch
  replicas: 3
  selector:
    matchLabels:
      app: mysql-batch
  template:
    metadata:
      labels:
        app: mysql-batch
    spec:
      containers:
        - name: mysql-batch
          image: mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-batch-data
              mountPath: /var/lib/mysql
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: kubernetes.io/hostname
              labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - mysql-batch
      volumes:
        - name: mysql-batch-data
          persistentVolumeClaim:
            claimName: mysql-batch-pvc
