.k8s/ollama.yml
apiVersion: v1
kind: Service
metadata:
  name: ollama-service
  namespace: ai
spec:
  selector:
    app: ollama
  ports:
    - port: 11434
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
  namespace: ai
  labels:
    app: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      name: ollama
      namespace: ai
      labels:
        app: ollama
    spec:
      containers:
        - name: ollama
          image: ollama/ollama:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 11434
          resources:
            requests:
              memory: 4Gi
              cpu: "1"
            limits:
              memory: 4Gi
              cpu: "2"
          volumeMounts:
            - name: ollama-volume
              mountPath: /mnt/data/llama32
      volumes:
        - name: ollama-volume
          persistentVolumeClaim:
            claimName: ollama-pvc
