.k8s/subscription-service.yml
apiVersion: v1
kind: Service
metadata:
  name: subscription-service
spec:
  selector:
    app: subscription-service
  ports:
    - port: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: selenium-chrome
spec:
  selector:
    app: selenium-chrome
  ports:
    - port: 4444
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subscription-service
spec:
  selector:
    matchLabels:
      app: subscription-service
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: subscription-service
    spec:
      containers:
        - name: subscription-service
          image: climacast/subscription-service:${IMAGE_TAG}
          imagePullPolicy: Never
          ports:
            - containerPort: 8090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-chrome
spec:
  selector:
    matchLabels:
      app: selenium-chrome
  replicas: 1
  template:
    metadata:
      labels:
        app: selenium-chrome
    spec:
      containers:
        - name: selenium-chrome
          image: seleniarm/standalone-chromium:latest
          ports:
            - containerPort: 4444
